2014-06-09  Eric Carlson  <eric.carlson@apple.com>

        [iOS] Wireless route picker control should use touch event handlers
        https://bugs.webkit.org/show_bug.cgi?id=133672

        Reviewed by Brent Fulgham.

        * Modules/mediacontrols/mediaControlsiOS.js:
        (ControllerIOS.prototype.createControls): Listen for touch events.
        (ControllerIOS.prototype.handleWirelessPickerButtonTouchStart): New, handle touch start.
        (ControllerIOS.prototype.handleWirelessPickerButtonTouchEnd): New, handle touch end.
        (ControllerIOS.prototype.handleWirelessPickerButtonTouchCancel): New, handle touch cancel.
        (ControllerIOS.prototype.handleWirelessPickerButtonClicked): Deleted.

2014-06-09  Benjamin Poulain  <benjamin@webkit.org>

        Do not use a mask when matching the return value of a function call on ARM
        https://bugs.webkit.org/show_bug.cgi?id=133614

        Reviewed by Andreas Kling.

        On ARM, we cannot have garbage on the top bits of booleans. It is faster to check the whole
        register for nullity.

        * cssjit/FunctionCall.h:
        (WebCore::FunctionCall::callAndBranchOnBooleanReturnValue):
        (WebCore::FunctionCall::callAndBranchOnCondition):
        * cssjit/SelectorCompiler.cpp:
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementAttributeValueExactMatching):
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementAttributeFunctionCallValueMatching):
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementFunctionCallTest):
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementIsActive):
        (WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementIsHovered):

2014-06-09  Ryosuke Niwa  <rniwa@webkit.org>

        Remove the bogus assertion that didn't even build.

        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::formatNumberValue):

2014-06-09  Ryosuke Niwa  <rniwa@webkit.org>